# Final-Year-Project

./: README.md
Logs/GPS/: .sample_2.608447.swp
Logs/IMU/Accel/: sample_0.000000  sample_0.000000.hdr  sample_0.028073  sample_0.028073.hdr  sample_0.056123  sample_0.056123.hdr  sample_0.084145  sample_0.084145.hdr  sample_0.112190  sample_0.112190.hdr  sample_0.140223  sample_0.140223.hdr  sample_0.168257  sample_0.168257.hdr  sample_0.196289  sample_0.196289.hdr  sample_0.224322  sample_0.224322.hdr  sample_0.252355  sample_0.252355.hdr  sample_0.280387  sample_0.280387.hdr  sample_0.308417  sample_0.308417.hdr  sample_0.336473  sample_0.364500  sample_0.364500.hdr  sample_0.392521  sample_0.392521.hdr  sample_0.420575  sample_0.420575.hdr  sample_0.448608  sample_0.448608.hdr  sample_0.476641  sample_0.532728  sample_0.532728.hdr  sample_0.560762  sample_0.588782  sample_0.588782.hdr  sample_0.616812  (+255 more)
Logs/IMU/Gyro/: sample_4.332063  sample_4.332063.hdr  sample_4.618603.hdr  sample_4.960303
src/: CMakeLists.txt
src/Arduino/: ARD.cpp  ARD.h  simple_serial_comms.ino  simple_serial_length.ino
src/FunctionTesting/: .unitTests.cpp.swp  ArdTest.cpp  CMakeLists.txt  IMUTest.cpp  MOOSTests.cpp  MOOSTests.h  async_test  funcTests.cpp  unitTests.cpp
src/FunctionTesting/MOOSDBTests/: .asynctest.log.swp  asynctest25Hz16B.csv  asynctest25Hz40B.csv  asynctest50Hz16B.csv  asynctest50Hz40B.csv
src/GPS/: .GPS.h.swp  .gpsApp.cpp.swo  CMakeLists.txt  GPS.cpp  GPS.h  gpsApp.cpp
src/IMU/: .IMUApp.cpp.swp  .testing.cpp.swp  CMakeLists.txt  IMUApp.cpp  clogger.cpp  clogger.h  testing.cpp
src/PostApplication/: .PostApp.cpp.swp  CMakeLists.txt  PostApp.cpp  PostApp.h
src/ReceiveApplication/: .RecApp.cpp.swp  :wq  CMakeLists.txt  RecApp.cpp  RecApp.h
